--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
     </div>
-    <div class="winning-message">
-        <div data-winning-message-text id="winningMessage"></div>
+    <div class="winning-message" id="winningMessage">
+        <div data-winning-message-text></div>
         <button id="restartButton">Restart</button>
     </div>
 </body>
